--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,20 +1,28 @@
 <ion-tabs>
-
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
-      <ion-icon name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+    <ion-tab-button tab="home">
+      <ion-icon name="home-outline"></ion-icon>
+      <ion-label>Inicio</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
-      <ion-icon name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+    <ion-tab-button tab="quote">
+      <ion-icon name="document-outline"></ion-icon>
+      <ion-label>Cotiza</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+    <ion-tab-button tab="sell">
+      <ion-icon name="add-circle-outline"></ion-icon>
+      <ion-label>Vende</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="coupons">
+      <ion-icon name="pricetag-outline"></ion-icon>
+      <ion-label>Cupones</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="work">
+      <ion-icon name="briefcase-outline"></ion-icon>
+      <ion-label>Empleos</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
-
 </ion-tabs>
