Login and Register basic template

--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -4,25 +4,21 @@
       <ion-icon name="home-outline"></ion-icon>
       <ion-label>Inicio</ion-label>
     </ion-tab-button>
-
     <ion-tab-button tab="quote">
-      <ion-icon name="document-outline"></ion-icon>
+      <ion-icon name="documents-outline"></ion-icon>
       <ion-label>Cotiza</ion-label>
     </ion-tab-button>
-
     <ion-tab-button tab="sell">
       <ion-icon name="add-circle-outline"></ion-icon>
       <ion-label>Vende</ion-label>
     </ion-tab-button>
-
     <ion-tab-button tab="coupons">
-      <ion-icon name="pricetag-outline"></ion-icon>
+      <ion-icon name="pricetags-outline"></ion-icon>
       <ion-label>Cupones</ion-label>
     </ion-tab-button>
-
-    <ion-tab-button tab="work">
-      <ion-icon name="briefcase-outline"></ion-icon>
-      <ion-label>Empleos</ion-label>
+    <ion-tab-button tab="menu">
+      <ion-icon name="ellipsis-horizontal-circle-outline"></ion-icon>
+      <ion-label>Más</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
