Basic folder struct for marketplace module

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,5 +3,6 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-searchbar placeholder="Buscar"></ion-searchbar>
+  <app-search></app-search>
+  <app-category-card></app-category-card>
 </ion-content>
