Category service, category card list

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,6 +3,6 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <app-search></app-search>
-  <app-category-card></app-category-card>
+  <app-category-list class="item-list" [categories]="categories[0]"></app-category-list>
+  <app-product-card></app-product-card>
 </ion-content>
