--- a/src/app/markteplace/components/category-card/category-card.component.html
+++ b/src/app/markteplace/components/category-card/category-card.component.html
@@ -1,3 +1,8 @@
-<p>
-  category-card works!
-</p>
+<ion-card>
+  <img src="{{category.image}}" alt=""/>
+  <ion-card-header>
+    <ion-card-title>{{category.name}}</ion-card-title>
+  </ion-card-header>
+ 
+</ion-card>
+
