--- a/src/app/markteplace/components/product-card/product-card.component.html
+++ b/src/app/markteplace/components/product-card/product-card.component.html
@@ -1,3 +1,9 @@
-<p>
-  product-card works!
-</p>
+<ion-card>
+  <img src="https://impomarejo.com/uploads/sin_imagen.png" />
+  <ion-card-header>
+    <ion-card-subtitle>Titulo de producto</ion-card-subtitle>
+  </ion-card-header>
+  <ion-card-content>
+    Founded in 1829 on an isthmus between Lake Monona and Lake Mendota, Madison was named the capital of the Wisconsin Territory in 1836.
+  </ion-card-content>
+</ion-card>
