--- a/src/app/markteplace/components/discounted-product-list/discounted-product-list.component.html
+++ b/src/app/markteplace/components/discounted-product-list/discounted-product-list.component.html
@@ -1,3 +1,26 @@
-<p>
-  discounted-product-list works!
-</p>
+
+<ion-text color="dark">
+  <h4>Ofertas</h4>
+</ion-text>
+<swiper
+  [slidesPerView]="1.8"
+  [spaceBetween]="5"
+  
+  class="product-descount"
+  
+>
+
+  <ng-template swiperSlide *ngFor="let product of products" >
+    <app-product-card  [product]="product"></app-product-card>
+    
+
+  </ng-template>
+
+   
+
+
+   
+
+
+   
+</swiper>
