Profile list service design and consultation

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,5 +7,5 @@
   <!-- List Products discounted -->
   <app-discounted-product-list [products]="products[0]"></app-discounted-product-list>
   <!-- Profile list -->
-  <app-recommended-profile-list></app-recommended-profile-list>
+  <app-recommended-profile-list [profiles]="profiles[0]"></app-recommended-profile-list>
 </ion-content>
