--- a/src/app/markteplace/components/recommended-profile-list/recommended-profile-list.component.html
+++ b/src/app/markteplace/components/recommended-profile-list/recommended-profile-list.component.html
@@ -10,8 +10,8 @@
   
 >
 
-  <ng-template swiperSlide *ngFor="let profile of [1,2,3,2,5]" >
-    <app-profile-card></app-profile-card>
+  <ng-template swiperSlide *ngFor="let profile of profiles" >
+    <app-profile-card [profile]="profile"></app-profile-card>
     
 
   </ng-template>
