Recommended product card list, size design change in card image

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,4 +8,6 @@
   <app-discounted-product-list [products]="products[0]"></app-discounted-product-list>
   <!-- Profile list -->
   <app-recommended-profile-list [profiles]="profiles[0]"></app-recommended-profile-list>
+<!-- List Products recomended -->
+<app-recommended-product-list [products]="productsRecomended[0]"></app-recommended-product-list>
 </ion-content>
