--- a/src/app/markteplace/components/recommended-product-list/recommended-product-list.component.html
+++ b/src/app/markteplace/components/recommended-product-list/recommended-product-list.component.html
@@ -7,7 +7,7 @@
   class="product-descount"  
 >
   <ng-template swiperSlide *ngFor="let product of products" >
-    <app-product-card  [product]="product"></app-product-card>   
+    <app-product-card  [product]="product" (click)="selectProduc(product.id)"></app-product-card>   
   </ng-template>
    
 </swiper>
