--- a/src/app/markteplace/components/profile-card/profile-card.component.html
+++ b/src/app/markteplace/components/profile-card/profile-card.component.html
@@ -2,7 +2,7 @@
 
  
 <div class="img-profile">
-  <ion-avatar >
+  <ion-avatar>
     <img src="{{profile.photo}}">
   </ion-avatar>
 </div >
@@ -14,8 +14,8 @@
   <ion-card-content>
    <ion-row>
      <ion-col size="8" class="ion-text-start">
-       <p>Ventas: {{profile.sales}}</p>
-       <p>Productos: {{profile.products}}</p>
+       <p><ion-icon name="pricetags"></ion-icon>: {{profile.sales}}</p>
+       <p><ion-icon name="albums"></ion-icon>: {{profile.products}}</p>
 
      </ion-col >
      <ion-col size="4" class="ion-text-end"> 
