--- a/src/app/markteplace/components/profile-card/profile-card.component.scss
+++ b/src/app/markteplace/components/profile-card/profile-card.component.scss
@@ -1,5 +1,4 @@
 .img-profile {
-margin-top: 3%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,10 +18,8 @@ ion-avatar img {
 .favorite {
   font-size: 1.7rem;
 }
-.text-title {
+ion-card-title  {
   font-size: 1rem;
 }
 
-ion-card-content{
-  
-}
+
