--- a/src/app/markteplace/pages/product/product.page.html
+++ b/src/app/markteplace/pages/product/product.page.html
@@ -13,8 +13,7 @@
 
 <ion-content fullscreen>
     <img src="{{product.images}}" />
-    <ion-card-content>
-    
+    <ion-card-content>    
     <ion-item>
       <ion-avatar item-start>
         <img src="{{profile.photo}}"/>
@@ -31,7 +30,15 @@
       </p>
       <ion-card-title *ngIf="product.oldPrice >0" class="price-desc-title"><del>{{product.oldPrice | currency:'Q'}}</del> </ion-card-title>
   <ion-card-title class="price-title">{{product.price | currency:'Q'}}</ion-card-title>
-       
+  <p>
+    Categorias
+  </p>
+  <div *ngIf="product.categories.length >1" >
+    <ion-badge color="medium">88</ion-badge>
+    <ion-badge color="medium">88</ion-badge>
+  </div>
+  
+
     </ion-card-content>
 </ion-content>
 
