--- a/src/app/quote/quote.page.html
+++ b/src/app/quote/quote.page.html
@@ -3,5 +3,62 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-   <h2>Cotiza</h2>
+  <ion-searchbar placeholder="Buscar"></ion-searchbar>
+  <ion-card>
+    <ion-item lines="none">
+    <ion-avatar>
+      <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
+    </ion-avatar>
+    <ion-item lines="none">
+      <ion-label>Nike Air Force 1</ion-label>
+      <ion-badge slot="end" color="success">Tienes 4 ofertas</ion-badge>
+    </ion-item>
+    
+      <ion-item lines="none">
+        <ion-label>
+          <p>25/10/2021 12:30 pm</p>
+          <p>4 Ofertas</p>
+        </ion-label>
+      </ion-item>
+    </ion-item>
+  </ion-card>
+
+  <ion-card>
+   
+    <ion-row>
+      <ion-col size="2" class="rowofcards">
+      <img class="img" src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
+
+      </ion-col>
+      <ion-col size="10">
+        <ion-item lines="none">
+          <ion-label>  
+            Silla Gamer Ocetol Rosa displonible hoy  
+            <p>18/10/2021 04:30 pm</p>       
+            <ion-badge  color="success">Tienes 2 ofertas</ion-badge>
+          </ion-label>
+        </ion-item>
+      </ion-col>
+
+    </ion-row>
+    
+  </ion-card>
+
+  <ion-card>
+    <ion-item lines="none">
+      <ion-label>Gamepad QD55</ion-label>
+      <ion-badge slot="end" color="danger">Aun o tienes ofertas</ion-badge>
+    </ion-item>
+    <ion-item>
+      <ion-label>
+        <p>11/10/2021 08:30 am</p>
+        <p>8 Ofertas</p>
+      </ion-label>
+    </ion-item>
+  </ion-card>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="newQuote()">
+    <ion-fab-button>
+      <ion-icon name="add-outline"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
