Adding functions for querying quotes and creating view components

--- a/src/app/markteplace/pages/product/product.page.html
+++ b/src/app/markteplace/pages/product/product.page.html
@@ -33,7 +33,7 @@
   <p>
     Categorias
   </p>
-  <div *ngIf="product.categories.length >1" >
+  <div>
     <ion-badge color="medium">88</ion-badge>
     <ion-badge color="medium">88</ion-badge>
   </div>
