Component design change and quotation response model creation

--- a/src/app/quote/quote.page.html
+++ b/src/app/quote/quote.page.html
@@ -4,8 +4,9 @@
 
 <ion-content [fullscreen]="true">
   <ion-searchbar placeholder="Buscar"></ion-searchbar>
-
-  <app-quote-list [quotes]="quotes[0]"></app-quote-list>
+  <ion-list>
+      <app-quote-list [quotes]="quotes[0]"></app-quote-list>
+  </ion-list>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="newQuote()">
     <ion-fab-button>
