--- a/src/app/markteplace/components/quote/quote.component.html
+++ b/src/app/markteplace/components/quote/quote.component.html
@@ -1,9 +1,9 @@
-<ion-card>
-  <ion-item lines="none">
-    <ion-label>
-      {{quote.title}}
-      <p>18/10/2021 04:30 pm</p>
-      <ion-badge color="success">Tienes 2 ofertas</ion-badge>
-    </ion-label>
-  </ion-item>
-</ion-card>
+  <ion-card>
+    <ion-item lines="none">
+      <ion-label>
+        {{quote.title}}
+        <p>{{quote.createdAt}}</p>
+        <ion-badge [color]="quote.responses.length>0 ? 'success' : 'danger'">{{ofertas}}</ion-badge>
+      </ion-label>
+    </ion-item>
+  </ion-card>
