Creation and consultation of quotation response services

--- a/src/app/markteplace/components/quote-list/quote-list.component.html
+++ b/src/app/markteplace/components/quote-list/quote-list.component.html
@@ -1,4 +1,3 @@
 <div *ngFor="let quote of quotes">
-  <app-quote [quote]="quote"></app-quote>
-
+  <app-quote [quote]="quote" (click)="selectQuote(quote.id)"></app-quote>
 </div>
