--- a/src/app/modals/new-quote/new-quote.page.html
+++ b/src/app/modals/new-quote/new-quote.page.html
@@ -26,36 +26,37 @@
     </ion-row>
     <ion-row>
       <ion-col size="12">
-        <ion-label>Rengo de precio</ion-label>
+        <ion-label>Rango de precio</ion-label>
       </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
+      <ion-col size="12">
         <ion-item>
           <ion-label position="floating">Precio mínimo</ion-label>
           <ion-input type="number"></ion-input>
         </ion-item>
       </ion-col>
-      <ion-col>
+      <ion-col size="12">
         <ion-item>
           <ion-label position="floating">Precio máximo</ion-label>
           <ion-input type="number"></ion-input>
         </ion-item>
       </ion-col>
     </ion-row>
+
   <ion-row>
     <ion-col size="12">
     <ion-item lines="none">
       <ion-label>Categorias</ion-label>
-      <ion-buttons slot="end" text-capitalize=“false”>
-        <ion-button>Agregar Categoria</ion-button>
-      </ion-buttons>
+      <ion-select multiple="true" [value]="categories" placeholder="Seleccione una categoria">
+        <ion-select-option value="electrónicos">Electrónicos</ion-select-option>
+        <ion-select-option value="servicios">Servicios</ion-select-option>
+        <ion-select-option value="celulares">Celulares</ion-select-option>
+        <ion-select-option value="repuestos">Repuestos</ion-select-option>
+      </ion-select>
     </ion-item>
     </ion-col>
     <ion-col size="12">
-      <div>
-        <ion-badge color="medium">Categoria 1</ion-badge>
-        <ion-badge color="medium">Categoria 2</ion-badge>
+      <div *ngFor="let category of categories">
+        <ion-badge color="medium">{{category}}</ion-badge>
       </div>
     </ion-col>
   </ion-row>
