--- a/src/app/markteplace/components/response-quote-list/response-quote-list.component.html
+++ b/src/app/markteplace/components/response-quote-list/response-quote-list.component.html
@@ -1,3 +1,3 @@
 <div *ngFor="let resp of responseQuotes">
-  <app-response-quote [resp]="resp"></app-response-quote>
+  <app-response-quote [resp]="resp" (click)="viewResposeDetailQuote(resp.id)"></app-response-quote>
 </div>
