--- a/src/app/sell/sell.page.html
+++ b/src/app/sell/sell.page.html
@@ -3,5 +3,87 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-   <h2>Vende</h2>
+  <ion-grid>
+    <div class="ion-text-center">
+      <h2>Registrar</h2>
+    </div>
+    <ion-row>
+      <ion-col size="12">
+        <ion-item>
+          <ion-label position="floating">Producto</ion-label>
+          <ion-input></ion-input>
+        </ion-item>
+      </ion-col>
+      <ion-col size="12">
+        <ion-item>
+          <ion-label position="floating">Descripción</ion-label>
+          <ion-textarea></ion-textarea>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      
+      <ion-col size="12">
+        <ion-item>
+          <ion-label position="floating">Precio </ion-label>
+          <ion-input type="number"></ion-input>
+        </ion-item>
+      </ion-col>
+     
+    </ion-row>
+
+  <ion-row>
+    <ion-col size="12">
+    <ion-item lines="none">
+      <ion-label position="stacked">Categorias</ion-label>
+      <ion-select multiple="true" [value]="categories" placeholder="Seleccione una categoria">
+        <ion-select-option value="electrónicos">Electrónicos</ion-select-option>
+        <ion-select-option value="servicios">Servicios</ion-select-option>
+        <ion-select-option value="celulares">Celulares</ion-select-option>
+        <ion-select-option value="repuestos">Repuestos</ion-select-option>
+      </ion-select>
+    </ion-item>
+    </ion-col>
+    <ion-col size="12">
+      <div *ngFor="let category of categories">
+        <ion-badge color="medium">{{category}}</ion-badge>
+      </div>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col size="12">
+      <ion-item>
+        <ion-label position="stacked">Estado</ion-label>
+        <ion-select placeholder="Seleccione un estado">
+          <ion-select-option value="new">Nuevo</ion-select-option>
+          <ion-select-option value="use">Usado</ion-select-option>
+          <ion-select-option value="box">En caja</ion-select-option>
+
+        </ion-select>
+      </ion-item>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col size="12">
+      <ion-item>
+        <ion-label position="stacked">Estado</ion-label>
+        <ion-select placeholder="Seleccione un tipo">
+          <ion-select-option value="product">Producto</ion-select-option>
+          <ion-select-option value="service">Servicio</ion-select-option>
+        </ion-select>
+      </ion-item>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col size="12">
+      <ion-item>
+        <ion-label position="stacked">Imagen </ion-label>
+        <ion-input type="file"></ion-input>
+      </ion-item>
+    </ion-col>
+  </ion-row>
+  <ion-button expand="full">Guardar</ion-button>
+            
+
+  </ion-grid>
 </ion-content>
