--- a/src/app/coupons/coupons.page.html
+++ b/src/app/coupons/coupons.page.html
@@ -3,5 +3,31 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <h2>Cupones</h2>
+  <ion-searchbar placeholder="Buscar"></ion-searchbar>
+
+  <ion-row>
+    <ion-col size="6" >
+      <ion-card >
+        <img src="https://x3jme3vmctf3dmlkql5tzx17-wpengine.netdna-ssl.com/wp-content/uploads/2020/11/pasteles-de-natilla.png" alt=""/>
+        <ion-card-header>
+          <ion-card-title>Anfora 15% de descuento en pasteledes clasico</ion-card-title>
+          <ion-card-subtitle>Válido hasta: 31/12/2021</ion-card-subtitle>
+          <ion-button color="primary" expand="full">Ver más</ion-button>
+        </ion-card-header>      
+      </ion-card>
+    </ion-col>
+    <ion-col size="6" >
+      <ion-card >
+        <img src="https://curiosfera-historia.com/wp-content/uploads/Historia-de-los-bolos-1.jpg" alt=""/>
+        <ion-card-header>
+          <ion-card-title>lanet Bowl 2x1 en hora de boliche</ion-card-title>
+          <ion-card-subtitle>Válido hasta: 31/12/2021</ion-card-subtitle>
+          <ion-button color="primary" expand="full">Ver más</ion-button>
+        </ion-card-header>      
+      </ion-card>
+    </ion-col>
+    
+
+  </ion-row>
+
 </ion-content>
