Basic layout of coupon view details

--- a/src/app/coupons/coupons.page.html
+++ b/src/app/coupons/coupons.page.html
@@ -12,7 +12,7 @@
         <ion-card-header>
           <ion-card-title>Anfora 15% de descuento en pasteledes clasico</ion-card-title>
           <ion-card-subtitle>Válido hasta: 31/12/2021</ion-card-subtitle>
-          <ion-button color="primary" expand="full">Ver más</ion-button>
+          <ion-button color="primary" expand="full" (click)="viewCouponByID('452')">Ver más</ion-button>
         </ion-card-header>      
       </ion-card>
     </ion-col>
@@ -22,7 +22,7 @@
         <ion-card-header>
           <ion-card-title>lanet Bowl 2x1 en hora de boliche</ion-card-title>
           <ion-card-subtitle>Válido hasta: 31/12/2021</ion-card-subtitle>
-          <ion-button color="primary" expand="full">Ver más</ion-button>
+          <ion-button color="primary" expand="full" (click)="viewCouponByID('452')">Ver más</ion-button>
         </ion-card-header>      
       </ion-card>
     </ion-col>
