--- a/src/app/markteplace/pages/product/product.page.html
+++ b/src/app/markteplace/pages/product/product.page.html
@@ -1,60 +1,57 @@
 <ion-header>
   <ion-toolbar>
-     <ion-buttons>
-       <ion-back-button></ion-back-button>
-     </ion-buttons>
-     <ion-buttons slot="end">
+    <ion-buttons>
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-buttons slot="end">
       <app-notification-icon [newNotifications]="10"></app-notification-icon>
       <app-chat-icon [newNotifications]="10"></app-chat-icon>
     </ion-buttons>
   </ion-toolbar>
-
 </ion-header>
 
 <ion-content fullscreen>
-    <img src="{{product.images}}" />
-    <ion-card-content>    
+  <img src="{{product.images}}" />
+  <ion-card-content>
     <ion-item>
       <ion-avatar item-start>
-        <img src="{{profile.photo}}"/>
+        <img src="{{profile.photo}}" />
       </ion-avatar>
       <ion-label>
         <h2>{{profile.name}}</h2>
-        <p class="ion-text-start"><ion-icon name="star"></ion-icon> {{profile.rating}} </p>
+        <p class="ion-text-start">
+          <ion-icon name="star"></ion-icon> {{profile.rating}}
+        </p>
       </ion-label>
     </ion-item>
-    <ion-card-title>{{product.name}}</ion-card-title>      
-    <ion-card-subtitle ><ion-icon name="star"></ion-icon> {{product.rating}} </ion-card-subtitle> 
-      <p>
-        {{product.description}}
-      </p>
-      <ion-card-title *ngIf="product.oldPrice >0" class="price-desc-title"><del>{{product.oldPrice | currency:'Q'}}</del> </ion-card-title>
-  <ion-card-title class="price-title">{{product.price | currency:'Q'}}</ion-card-title>
-  <p>
-    Categorias
-  </p>
-  <ion-row>
-    <ion-col>
-      <ion-badge color="medium">{{product.categories}}</ion-badge>
-    </ion-col>
-    <ion-col>
-      <ion-badge color="medium">Computadoras</ion-badge>
-    </ion-col> 
-    <ion-col>
-      <ion-badge color="medium">Componentes</ion-badge>
-    </ion-col>
-    <ion-col>
-      <ion-badge color="medium">Electronicos</ion-badge>
-    </ion-col>
-  </ion-row>
+    <ion-card-title>{{product.name}}</ion-card-title>
+    <ion-card-subtitle
+      ><ion-icon name="star"></ion-icon> {{product.rating}}
+    </ion-card-subtitle>
+    <p>{{product.description}}</p>
+    <ion-card-title *ngIf="product.oldPrice >0" class="price-desc-title"
+      ><del>{{product.oldPrice | currency:'Q'}}</del>
+    </ion-card-title>
+    <ion-card-title class="price-title"
+      >{{product.price | currency:'Q'}}</ion-card-title
+    >
+    <p>Categorias</p>
+    <ion-row>
+      <ion-col>
+        <ion-badge color="medium">{{product.categories}}</ion-badge>
+      </ion-col>
+      <ion-col>
+        <ion-badge color="medium">Computadoras</ion-badge>
+      </ion-col>
+      <ion-col>
+        <ion-badge color="medium">Componentes</ion-badge>
+      </ion-col>
+      <ion-col>
+        <ion-badge color="medium">Electronicos</ion-badge>
+      </ion-col>
+    </ion-row>
 
-  <p>
-    Descripción
-  </p>
-  <ion-label>
-  {{product.description}}
-  </ion-label>
-    </ion-card-content>
+    <p>Descripción</p>
+    <ion-label> {{product.description}} </ion-label>
+  </ion-card-content>
 </ion-content>
-
-  
