--- a/src/app/coupons/coupons.page.html
+++ b/src/app/coupons/coupons.page.html
@@ -4,8 +4,8 @@
 
 <ion-content [fullscreen]="true">
   <ion-searchbar placeholder="Buscar"></ion-searchbar>
-
-  <ion-row>
+  <app-coupons-list [coupons]="coupons[0]"></app-coupons-list>
+  <!-- <ion-row>
     <ion-col size="6" >
       <ion-card >
         <img src="https://x3jme3vmctf3dmlkql5tzx17-wpengine.netdna-ssl.com/wp-content/uploads/2020/11/pasteles-de-natilla.png" alt=""/>
@@ -26,8 +26,19 @@
         </ion-card-header>      
       </ion-card>
     </ion-col>
+
+    <ion-col size="6" >
+      <ion-card >
+        <img src="https://x3jme3vmctf3dmlkql5tzx17-wpengine.netdna-ssl.com/wp-content/uploads/2020/11/pasteles-de-natilla.png" alt=""/>
+        <ion-card-header>
+          <ion-card-title>Brassica - Parrillada para 2 personas por Q199</ion-card-title>
+          <ion-card-subtitle>Válido hasta: 31/12/2021</ion-card-subtitle>
+          <ion-button color="primary" expand="full" (click)="viewCouponByID('452')">Ver más</ion-button>
+        </ion-card-header>      
+      </ion-card>
+    </ion-col>
     
 
-  </ion-row>
+  </ion-row> -->
 
 </ion-content>
