--- a/src/app/markteplace/components/coupon-card/coupon-card.component.scss
+++ b/src/app/markteplace/components/coupon-card/coupon-card.component.scss
@@ -1,7 +1,14 @@
 ion-card-title{
     font-size:0.9rem;
 }
+ion-card-header{
+    margin: 0;
+    padding: 5px;
 
+}
+ion-card{
+    padding: 5px;
+}
 .center-img{
     width:100%;
     text-align: center;
