--- a/src/app/markteplace/components/coupons-list/coupons-list.component.html
+++ b/src/app/markteplace/components/coupons-list/coupons-list.component.html
@@ -1,5 +1,5 @@
 <ion-row > 
-  <ion-col size="6" *ngFor="let coupon of coupons">
+  <ion-col size="6" *ngFor="let coupon of coupons" class="ion-no-padding ion-no-margin">
     <app-coupon-card [coupon]="coupon"></app-coupon-card>
     
   </ion-col>
