--- a/src/app/markteplace/pages/detail-profile/detail-profile.page.html
+++ b/src/app/markteplace/pages/detail-profile/detail-profile.page.html
@@ -42,7 +42,7 @@
       scrollable
     >
       <ion-segment-button value="vewProduct" checked>
-        <ion-label>Productos</ion-label>
+        <ion-label>Prod.</ion-label>
       </ion-segment-button>
       <ion-segment-button value="profile">
         <ion-label>Perfil</ion-label>
