--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -52,6 +52,10 @@
       <ion-icon name="person" slot="start"></ion-icon>
       <ion-label>Mi Perfil</ion-label>
     </ion-item>
+    <ion-item (click)="viewRedirect('/chats')">
+      <ion-icon name="chatbubbles" slot="start"></ion-icon>
+      <ion-label>Chats</ion-label>
+    </ion-item>
     <ion-item>
       <ion-icon name="wallet" slot="start"></ion-icon>
       <ion-label>Mi Billetera</ion-label>
