--- a/src/app/markteplace/pages/detail-response-quote/detail-response-quote.page.html
+++ b/src/app/markteplace/pages/detail-response-quote/detail-response-quote.page.html
@@ -31,17 +31,11 @@
       <ion-card-title *ngIf="product.oldPrice >0" class="price-desc-title"><del>{{product.oldPrice | currency:'Q'}}</del> </ion-card-title>
   <ion-card-title class="price-title">{{product.price | currency:'Q'}}</ion-card-title>
     <p>Categorias del producto:</p>
-    <ion-row>
-    
-      <ion-col>
-        <ion-badge color="medium">Computadoras</ion-badge>
-      </ion-col>
-      <ion-col>
-        <ion-badge color="medium">Componentes</ion-badge>
-      </ion-col>
-      <ion-col>
-        <ion-badge color="medium">Electronicos</ion-badge>
-      </ion-col>
+    <ion-row >
+      <div *ngFor="let category of product.categories">
+        
+        <ion-col><ion-badge color="medium">{{category.name}} </ion-badge> </ion-col>
+      </div>
     </ion-row>
 
     <p>Detalle Oferta:</p>
@@ -49,3 +43,4 @@
     <ion-button expand="block" >Aceptar Oferta</ion-button>
   </ion-card-content>
 </ion-content>
+ 
