Improvement of styles in modules, chat, coupons, coupon details, Wallet Creation, and blog undertakes

--- a/src/app/markteplace/pages/chat-list/chat-list.page.html
+++ b/src/app/markteplace/pages/chat-list/chat-list.page.html
@@ -3,29 +3,76 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>Mensajes</ion-title>
+    <ion-title>Juan Perez</ion-title>
   </ion-toolbar>
 
 </ion-header>
 
 <ion-content>
-  <ion-grid>
+  <ion-grid class="right">
 
-    <ion-row *ngFor="let message of messages">
-      <ion-col size="9" *ngIf="currentUser !== message.user" class="message other-message">
-        <b>{{ message.user}}</b> <br>
-        <span>{{message.message}}</span><br>
-        <div class="time" text-ring>{{message.createdAt | date:'short'}}</div>
-      </ion-col>
-      
-      <ion-col offset="3" size="9" *ngIf="currentUser === message.user" class="message my-message">
-        <b>{{ message.user}}</b> <br>
-        <span>{{message.message}}</span><br>
-        <div class="time" text-ring>{{message.createdAt | date:'short' }}</div>
-      </ion-col>
-    </ion-row>
+    
+
+    <ion-item>
+      <ion-avatar slot="start">
+        <img src="https://i.blogs.es/b124a3/p30/450_1000.jpg" />
+      </ion-avatar>
+      <ion-label>
+        <h3>Samsung S22</h3>
+        <p>Q 1500.00</p>
+      </ion-label>
+    </ion-item>
+
+    <ion-list>
+      <ion-row *ngFor="let i of [1]">
+        <ion-col size="10">
+          <div class="no-gutters">
+            <div class="message-your">
+                <div class="chat-bubble chat-bubble--left">                
+                  <!-- <b>Juan Lopez</b> <br> -->
+                  <span>Hola!</span><br>
+                  <div class="time" text-ring>12/02/22, 2:01pm</div>
+                </div>
+            </div>
+          </div>
+        </ion-col>
+  
+      </ion-row>
+      <ion-row>
+        <ion-col size="2"></ion-col>      
+        <ion-col size="10">
+          <div class=" no-gutters">
+            <div class="message-me">
+                <div class="chat-bubble chat-bubble--right">                  
+                  <span>Hola.</span><br>
+                  <div class="time" text-ring>12/02/22, 2:15pm</div>                
+                </div>
+            </div>
+          </div>
+        </ion-col>  
+      </ion-row>
+      <ion-row>
+        <ion-col size="2"></ion-col>      
+        <ion-col size="10">
+          <div class=" no-gutters">
+            <div class="message-me">
+                <div class="chat-bubble chat-bubble--right">                  
+                  <span>Un gusto saludarte.</span><br>
+                  <div class="time" text-ring>12/02/22, 2:15pm</div>                
+                </div>
+            </div>
+          </div>
+        </ion-col>  
+      </ion-row>
+    </ion-list>
+
+    
+		
+    
+   
+    
   </ion-grid>
-  <ion-fab vertical="bottom" horizontal="start" slot="fixed" >
+  <!-- <ion-fab vertical="bottom" horizontal="start" slot="fixed" >
     <ion-fab-button expand="block" fill="clear" color="dark">
       <ion-icon name="settings"></ion-icon>
     </ion-fab-button>
@@ -38,12 +85,24 @@
     </ion-fab-list>
     
     
-</ion-fab>
+</ion-fab> -->
 
 </ion-content>
 <ion-footer>
   <ion-toolbar color="light">
-    <ion-row>
+
+    <ion-row >
+			<ion-col >
+			  <div class="chat-box-tray">
+          <ion-icon name="settings-outline"></ion-icon>
+				<ion-input type="text" placeholder="Escribe tu mensaje aquí..."> </ion-input>
+				
+				<ion-icon name="send" slot="icon-only"></ion-icon>
+			  </div>
+			</ion-col>
+		</ion-row>
+
+    <!-- <ion-row>
       
       <ion-col size="10">
           <textarea autozice maxRows="2" class="message-input" [(ngModel)]="newMessage">
@@ -55,7 +114,7 @@
           <ion-icon name="send" slot="icon-only"></ion-icon>
         </ion-button>
       </ion-col>
-    </ion-row>
+    </ion-row> -->
 
   </ion-toolbar>
 </ion-footer>
