--- a/src/app/markteplace/pages/detail-profile/detail-profile.page.html
+++ b/src/app/markteplace/pages/detail-profile/detail-profile.page.html
@@ -13,7 +13,7 @@
 <ion-content fullscreen>
   <div class="img-profile">
     <ion-avatar>
-      <img class="“profile-photo”" src="{{profile.photo}}" />
+      <img class="profile-photo" src="{{profile.photo}}" />
     </ion-avatar>
   </div>
 
