--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -29,7 +29,7 @@
       <ion-icon name="documents" slot="start"></ion-icon>
       <ion-label>Cotiza</ion-label>
     </ion-item>
-    <ion-item>
+    <ion-item (click)="viewRedirect('/launch')">
       <ion-icon name="flag" slot="start"></ion-icon>
       <ion-label>Emprende</ion-label>
     </ion-item>
@@ -44,19 +44,20 @@
     <ion-item-divider>
       <ion-label> Mi Cuenta </ion-label>
     </ion-item-divider>
-    <ion-item color="primary">
+    <!-- <ion-item color="primary">
       <ion-icon name="star" slot="start"></ion-icon>
       <ion-label>Hazme Premium</ion-label>
-    </ion-item>
-    <ion-item>
+    </ion-item> -->
+    <ion-item (click)="viewRedirect('/profile')">
       <ion-icon name="person" slot="start"></ion-icon>
       <ion-label>Mi Perfil</ion-label>
     </ion-item>
+    
     <ion-item (click)="viewRedirect('/chats')">
       <ion-icon name="chatbubbles" slot="start"></ion-icon>
       <ion-label>Chats</ion-label>
     </ion-item>
-    <ion-item>
+    <ion-item (click)="viewRedirect('/wallet')">
       <ion-icon name="wallet" slot="start"></ion-icon>
       <ion-label>Mi Billetera</ion-label>
     </ion-item>
