--- a/src/app/modals/coupon-detail/coupon-detail.page.html
+++ b/src/app/modals/coupon-detail/coupon-detail.page.html
@@ -3,6 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
+    <ion-title>Detalle Cupon</ion-title>
   </ion-toolbar>
 </ion-header>
 
