Cambios de Estilos de tarjetas principales

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,3 +1,8 @@
-app-discounted-product-list{
+/* app-discounted-product-list{
     height:10vh;
+} */
+
+.container{
+    font-family: 'DM Sans', sans-serif;
 }
+
