--- a/src/app/markteplace/components/category-card/category-card.component.html
+++ b/src/app/markteplace/components/category-card/category-card.component.html
@@ -1,8 +1,17 @@
-<ion-card>
+<!-- <ion-card>
   <img src="{{category.image}}" alt=""/>
   <ion-card-header>
     <ion-card-title>{{category.name}}</ion-card-title>
   </ion-card-header>
  
-</ion-card>
+</ion-card> -->
 
+
+<div class="category">
+  <div class="category__title">
+    {{category.name}}
+  </div>
+  <img class="category__image" src="{{category.image}}" alt=""/>
+  
+
+</div>
