--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -2,7 +2,7 @@
   <app-header-bar></app-header-bar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content class="container" [fullscreen]="true">
   <app-category-list class="item-list" [categories]="categories[0]"></app-category-list>
   <!-- List Products discounted -->
   <app-discounted-product-list [products]="products[0]"></app-discounted-product-list>
