--- a/src/app/markteplace/components/category-card/category-card.component.scss
+++ b/src/app/markteplace/components/category-card/category-card.component.scss
@@ -6,3 +6,27 @@ ion-card img {
     width: 100%; 
     height: 15vh; 
 }
+
+
+.category{
+    background-color: hsl(204, 8%, 98%);
+    margin: 0.3em;
+    height: 100%;
+    border-radius: 0.5em;
+    display:grid;
+    grid-template-rows: 0.7fr 1.3fr;
+    justify-content: center;
+    align-items: center;
+    
+    &__title{
+        text-align: center;
+        font-weight: bold;
+    }
+    &__image {
+        width: 100%;
+        height: 100%;       
+        padding: 0.2em;
+        border-radius: 0.6em;
+    }
+    
+}
