--- a/src/app/markteplace/components/discounted-product-list/discounted-product-list.component.html
+++ b/src/app/markteplace/components/discounted-product-list/discounted-product-list.component.html
@@ -1,9 +1,9 @@
 
 <ion-text color="dark">
-  <h4>Ofertas</h4>
+  <h4 class="title-section">Ofertas</h4>
 </ion-text>
 <swiper
-  [slidesPerView]="1.5"
+  [slidesPerView]="1.8"
   [spaceBetween]="1"  
   class="product-descount"  
 >
