--- a/src/app/markteplace/components/discounted-product-list/discounted-product-list.component.scss
+++ b/src/app/markteplace/components/discounted-product-list/discounted-product-list.component.scss
@@ -2,7 +2,9 @@
 @import "~swiper/css/pagination";
 .swiper {
   width: 100%;
-  height: auto;
+  height: 30vh;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
 }
 
 .swiper-slide {
@@ -30,4 +32,10 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.title-section{
+  font-weight: 700;
+  padding-left: 0.5em ;
+  padding-right: 0.5em ;
 }
