--- a/src/app/markteplace/components/product-card/product-card.component.html
+++ b/src/app/markteplace/components/product-card/product-card.component.html
@@ -1,4 +1,4 @@
-<ion-card>
+<!-- <ion-card>
   <img src="{{product.images[0]}}" />
   <ion-card-header>
     <ion-row >
@@ -14,7 +14,33 @@
   <ion-card-content>
     <ion-card-title *ngIf="product.oldPrice >0" class="price-desc-title"><del>{{product.oldPrice | currency:'Q'}}</del> </ion-card-title>
   <ion-card-title class="price-title">{{product.price | currency:'Q'}}</ion-card-title>
-
   </ion-card-content>
-
 </ion-card>
+ -->
+<div class="offer">
+
+  <img class="offer__image"  src="{{product.images[0]}}" /> 
+  <div class="offer__header">
+    <div class="offer__header--price">
+      {{product.price | currency:'Q'}}
+      <div *ngIf="product.oldPrice >0" class="offer__header--price--old">
+        <del>{{product.oldPrice | currency:'Q'}}</del> 
+      </div>
+    </div>
+
+    <div class="offer__header--heart">
+      <ion-icon class="" name="heart-outline"></ion-icon>
+    </div>
+  </div>
+  <div class="offer__title">
+    <div class="offer__title--name">
+      {{product.name}}
+      
+    </div>
+    <div class="offer__title--rating">
+      <ion-icon name="star"></ion-icon> {{product.rating}} 
+    </div>
+  </div>
+
+
+</div>
