--- a/src/app/markteplace/components/profile-card/profile-card.component.html
+++ b/src/app/markteplace/components/profile-card/profile-card.component.html
@@ -1,4 +1,4 @@
-<ion-card>
+<!-- <ion-card>
 
  
 <div class="img-profile">
@@ -24,6 +24,33 @@
    </ion-row>
   </ion-card-content>
 
- 
+</ion-card> -->
 
-</ion-card>
+<div class="profile">
+  <img class="profile__image-avatar" src="{{profile.photo}}">
+  <div class="profile__title">
+    {{profile.name}}
+  </div>
+
+  <div class="profile__favorite">
+    <div class="profile__favorite--text">
+      {{profile.products}}
+      <div>Productos</div>
+       
+    </div>
+    <div class="profile__favorite--rating">
+      <ion-icon name="star"></ion-icon> {{profile.rating}}
+    </div>
+  </div>
+  
+  <div class="profile__footer">
+    <div class="profile__footer--text">
+      {{profile.sales}}
+      <div>Ventas</div>
+    </div>
+    <div class="profile__footer--heart">
+      
+      <ion-icon name="heart-outline" class=""></ion-icon>
+    </div>
+  </div>
+</div>
