--- a/src/app/markteplace/components/profile-card/profile-card.component.scss
+++ b/src/app/markteplace/components/profile-card/profile-card.component.scss
@@ -22,4 +22,47 @@ ion-card-title  {
   font-size: 1rem;
 }
 
+.profile{
+    width: 100%;
+    height: 100%;
+    margin: 0 0.3em;
+    padding: 0.5em;
+    border-radius: 0.5em;
+    display:grid;
+    grid-template-rows: 2fr 0.5fr 0.5fr 1fr;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;    
 
+    &__image-avatar{
+      border-radius: 50%;
+      height: 4.5em;
+      width: 4.5em;
+      margin: auto;
+      padding: auto;
+    }
+
+    &__title{
+      font-weight: 700;
+      font-size: 1.1em;
+    }
+
+    &__favorite{
+      display: grid;
+      grid-template-columns: 70% 30%;
+
+      
+    }
+
+    &__footer{
+      display: grid;
+      grid-template-columns: 70% 30%;
+
+      &--heart{
+        margin: auto;
+        padding: auto;
+        font-size: 2em;
+        
+      }
+    }
+
+  
+}
