--- a/src/app/markteplace/components/recommended-profile-list/recommended-profile-list.component.html
+++ b/src/app/markteplace/components/recommended-profile-list/recommended-profile-list.component.html
@@ -1,19 +1,17 @@
 
 <ion-text color="dark">
-  <h4>Perfiles recomendados</h4>
+  <h4 class="title-section">Perfiles recomendados</h4>
 </ion-text>
 <swiper
-  [slidesPerView]="2"
-  [spaceBetween]="1"
+  [slidesPerView]="2.3"
+  [spaceBetween]="10"
   
   class="product-descount"
   
 >
 
   <ng-template swiperSlide *ngFor="let profile of profiles" >
-    <app-profile-card class="container" [profile]="profile" (click)="viewProfile(profile.id)"></app-profile-card>
-    
-
+    <app-profile-card  [profile]="profile" (click)="viewProfile(profile.id)"></app-profile-card>
   </ng-template>
 
    
