--- a/src/app/markteplace/components/recommended-profile-list/recommended-profile-list.component.scss
+++ b/src/app/markteplace/components/recommended-profile-list/recommended-profile-list.component.scss
@@ -2,7 +2,7 @@
 @import "~swiper/css/pagination";
 .swiper {
   width: 100%;
-  height: auto;
+  height: 25vh;
 }
 
 .swiper-slide {
@@ -41,4 +41,10 @@ app-profile-card{
 
 .container{
   height: 100%;
+}
+
+.title-section{
+  font-weight: 700;
+  padding-left: 0.5em ;
+  padding-right: 0.5em ;
 }
